Extra margin on mobile devices fixed

--- a/src/App.css
+++ b/src/App.css
@@ -151,4 +151,7 @@ input {
   .input-container {
     width: 100%;
   }
+  input {
+    margin: 0;
+  }
 }
